3.0.13 - Multiple module fixes